# Book-IMS-Backend

./: api.py  pyproject.toml
app/database/schemas/: book_author.py  books.py  liked_books.py  llm_message_hist.py
app/llm_workflow/: llm.py  llm_utils.py  message_history.py  vector_store.py  workflow.py
app/schemas/: book.py
app/services/: author_services.py  book_services.py  llm_services.py  user_services.py
app/utils/: get_current_user.py  populate_database.py
